--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Using Custom Elements -->
-    <xbox-live name="Breno%20Polanski"></xbox-live>
+    <xbox-live name="Breno Polanski" avatar="full"></xbox-live>
 
 </body>
 </html>
